--- a/src/assets/scss/_login-register.scss
+++ b/src/assets/scss/_login-register.scss
@@ -57,7 +57,7 @@
       padding: 40px 15px;
     }
     .login-register-form {
-      form {
+      .form {
         input {
           background-color: transparent;
           border: 1px solid #ebebeb;
@@ -104,8 +104,9 @@
             color: #333;
             cursor: pointer;
             font-size: 14px;
-            font-weight: 500;
+            font-weight: 550;
             line-height: 1;
+            width: max-content;
             padding: 11px 30px;
             text-transform: uppercase;
             transition: all 0.3s ease 0s;
