--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,9 @@
 :root {
-  --brand: #a749ff;
-  --brandHover: #fa6bff;
   --headingColor: #000;
+  --brand: #07445f;
+  --brandHover: #ffb386;
 }
+
 // Font Family
 $poppins: "Poppins", sans-serif;
 $abrilfatface: "Abril Fatface", cursive;
