--- a/src/assets/scss/_blog.scss
+++ b/src/assets/scss/_blog.scss
@@ -25,7 +25,7 @@
 
         color: #fff;
         &.pink {
-          background-color: #fa6bff;
+          background-color: #ffb386;
         }
         &.purple {
           background-color: $theme-color;
@@ -415,7 +415,6 @@
         text-transform: uppercase;
 
         color: #000000;
-
 
         &::last-child {
           margin-right: 0;
