--- a/src/assets/scss/_product-details.scss
+++ b/src/assets/scss/_product-details.scss
@@ -37,7 +37,7 @@
 
       color: #fff;
       border-radius: 3px;
-      background-color: #fa6bff;
+      background-color: #ffb386;
     }
     .img-popup-wrap {
       font-size: 30px;
@@ -437,7 +437,7 @@
 
       color: #fff;
       border-radius: 3px;
-      background-color: #fa6bff;
+      background-color: #ffb386;
     }
     .product-video {
       position: absolute;
@@ -453,7 +453,7 @@
 
         color: #fff;
         border-radius: 3px;
-        background-color: #fa6bff;
+        background-color: #ffb386;
         @media #{$xs-layout} {
           padding: 3px 10px 3px;
         }
@@ -485,7 +485,7 @@
 
     color: #fff;
     border-radius: 3px;
-    background-color: #fa6bff;
+    background-color: #ffb386;
   }
 }
 .sidebar-active {
@@ -589,7 +589,7 @@
       color: #fff;
       border-radius: 3px;
       &.pink {
-        background-color: #fa6bff;
+        background-color: #ffb386;
       }
       &.purple {
         background-color: #a749ff;
