--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -68,8 +68,8 @@
 
             opacity: 0;
             &:checked ~ .checkmark {
-              border: 2px solid #fa6bff;
-              background-color: #fa6bff;
+              border: 2px solid #ffb386;
+              background-color: #ffb386;
             }
             &:checked ~ .checkmark::after {
               display: block;
